force-app/main/default/objects/Programmatic_Billing_Landing__c/Programmatic_Billing_Landing__c.object-meta.xml
<CustomObject>
    <label>Programmatic Billing Landing</label>
    <nameField>
        <label>Programmatic Billing Landing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programmatic Billing Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>