force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programmatic Billing Landings</relationshipLabel>
    <relationshipName>Programmatic_Billing_Landings</relationshipName>
    <type>Lookup</type>
</CustomField>