force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Actual_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Actual_Line_Item__c</fullName>
    <label>Actual Line Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>