force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <label>Change Date?</label>
    <type>Date</type>
</CustomField>