force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Difference_in_Amount__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Amount__c</fullName>
    <label>Difference in Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>