force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <label>Line Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>