force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name__c</fullName>
    <label>Line Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>