force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Memo_line__c.field-meta.xml
<CustomField>
    <fullName>Memo_line__c</fullName>
    <label>Memo line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>