force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Net_term__c.field-meta.xml
<CustomField>
    <fullName>Net_term__c</fullName>
    <label>Net term</label>
    <length>50</length>
    <type>Text</type>
</CustomField>