force-app/main/default/objects/Programmatic_Billing_Landing__c/fields/Revenue_Local__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Local__c</fullName>
    <label>Revenue Local</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>