force-app/main/default/objects/Programmatic_Billing_Landing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Impressions__c</columns>
    <columns>Service_Start_Date__c</columns>
    <columns>Service_End_Date__c</columns>
    <columns>Net_term__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>